Working on 3.0.0 (new core)
- "proxy" support too
- EVOL: the "resolving" mechanism is now completly new (more robust, more maintanable)
- EVOL: some little behaviour has changed :
    - headers can't be tested directly, only in "headers."
    - "content" should be now tested with full content (or use ".?" to be able to test like before (contains))
- EVOL: vars can be "ignorable" (<<var?>> will be empty if not defined), avoid ResolvingException !

2.9.1 (02/03/21)
- FIX: keep fragment of url in "reqman new" command

2.9.0 (02/03/21)
- EVOL: in rml: add "query" (dict) to build path with queryparams in an easy way
- EVOL: add GenRML() to generate rml's language string from a "request"
- FIX: exe'filename is now guessed from the os, in usage doc.

2.8.1 (27/02/21)
- FIX(better): exposed real python methods need to respect the same signature (func(x,ENV)), as pymethod declared in conf
        and add a @reqman.expose, to decorate those ones. (in dict reqman.EXPOSES)

2.8.0 (26/02/21)
- EVOL: ability to expose real python methods (func(x)), in reqman.exposes dict, when used as a lib/module
- EVOL: usage's commandline is now in reqman.__usage__

2.7.0 (20/02/21)
- EVOL: new option "--x:var" to be able to use reqman, to output a computed/var from the env.
        (let you do more scripting for special cases)
- EVOL: "> reqman reqman.conf" has a sense now ;-) (will run BEGIN/END)

2.6.1 (20/02/21)
- FIX: use yaml.SafeLoader instead of yaml.FullLoader (see https://www.huntr.dev/bounties/1-pip-reqman/), thanks to @Asjidkalam & @huntr-helper

2.6.0 (19/02/21)
- EVOL: ENV.path (path to the folder containing the reqman.conf) is available in python method
- FIX: allow setting multiple cookies (Set-Cookie is now a list, in outHeaders)

2.5.1 (11/12/20)
- no more warning of "if non resolved"

2.5.0 (07/12/20)
- bug fixes

2.4.2 (21/8/20)
- EVOL: include pyjwt in the core (useful for py methods in yml)

2.4.1 (27/4/20)