@@ -111,3 +111,4 @@ pypi.txt
 
 *.rmr
 save.yml
+AEFF.py
