@@ -1,5 +1,5 @@
 #!python3 fakereqman.py
-#:valid:101100,11111111 THIS --b
+#:valid:111100,11111111 THIS --b
 # -*- coding: utf-8 -*-
 #--------------------------------------------------------------
 # ^^^^^ REAL SHEBANG ^^^^^ (real test with real reqman sources)
