@@ -20,7 +20,7 @@ def _continue(exe):
     x=exe(".","--s",fakeServer=mock)  # generate a RMR
     assert "http://a/hello" in x.console
     assert x.rc==0
-    assert x.console.count("content =")==1
+    assert x.console.count("content contains")==1
     assert os.path.isfile("reqman.html")
     os.unlink("reqman.html")
     lrmr=[i for i in os.listdir(".") if i.endswith(".rmr")]
@@ -33,28 +33,28 @@ def _continue(exe):
     assert "http://a/hello" not in x.console # because nothing is replayed
     assert x.rc==0
     assert os.path.isfile("r1.html")
-    assert not x.console.count("content =")==1 # nothing is replayed, only output
+    assert not x.console.count("content contains")==1 # nothing is replayed, only output
 
     x=exe(lrmr[0],"-other","--o:r2.html",fakeServer=mock) # replay RMR with another switch  -> single result
     assert "http://b/hello" in x.console
     assert "http://a/hello" not in x.console
     assert x.rc==0
     assert os.path.isfile("r2.html")
-    assert x.console.count("content =")==2
+    assert x.console.count("content contains")==2
 
     x=exe(lrmr[0],"+other","--o:r3.html",fakeServer=mock) # compare RMR with another switch  -> dual result
     assert "http://b/hello" in x.console
     assert "http://a/hello" not in x.console #because A is not replayed
     assert x.rc==0
     assert os.path.isfile("r3.html")
-    assert x.console.count("content =")==2
+    assert x.console.count("content contains")==2
 
     x=exe(lrmr[0],"--r","--o:r4.html",fakeServer=mock) # REPLAY the RMR, and compare old and new -> dual
     assert "http://b/hello" not in x.console
     assert "http://a/hello" in x.console
     assert x.rc==0
     assert os.path.isfile("r4.html")
-    assert x.console.count("content =")==1
+    assert x.console.count("content contains")==1
     # x.view()
 
 def test_COMMAND_rmr_tests_old_switches(exe):   #<- it's not a real test ... just COPY/PASTE this one for next tests
